# mpfst-replication-bundle-v0.1.0

./: .gitignore  CITATION.cff  LICENSE  README.md  environment.yml  example_signal.csv  pyproject.toml  replication_manifest.yaml  requirements.txt
.github/workflows/: ci.yml  notebooks.yml
LICENSES/: LICENSE-APACHE-2.0.txt  LICENSE-CC-BY-4.0.txt
data/: README.md  fetch_gwosc.py  fetch_iris.py  fetch_openneuro.py
notebooks/: 02_eeg_hazard_tiering.ipynb  03_photonics_octave_jumps.ipynb  04_seismic_hazard_surrogates.ipynb
prereg/studies/: causal_densification.md  dimensionality_collapse.md  gw_ringdown_overtones.md  magnonics_usc_dsc.md  plasma_elm.md
scripts/: compute_m_l.py  detect_shell_jumps.py  fetch_all_data.sh  run_all.sh  run_notebooks.sh  vbk_gate.py
src/mpfst/: __init__.py
src/mpfst/causality/: granger.py  transfer_entropy.py
src/mpfst/coherence/: meter.py  metrics.py
src/mpfst/dimension/: collapse.py
src/mpfst/domains/: black_hole_isentropic.py  eeg.py  galactic_rotation.py  gw_ringdown.py  gw_superradiance.py  lensing.py  magnonics.py  microcomb.py  photonics.py  plasma_elm.py  rindler.py  seismology.py
src/mpfst/fractional/: inversion.py  response.py
src/mpfst/gating/: hazard.py  linear_response.py
src/mpfst/nulls/: phase_randomize.py  time_shuffle.py
src/mpfst/spectral/: octave_jump.py  ssm.py  utils.py
src/mpfst/stats/: fdr.py  (+2 more)
studies/: fractional_order_prediction.md  hazard_vs_ml.md  octave_quantization.md  tdcosmo_lensing.md
templates/: prereg_template.md
tests/: test_gw_vbk_gate.py  test_imports.py  test_ssm_smoke.py
